img alt's added to html

--- a/in-stock.html
+++ b/in-stock.html
@@ -20,7 +20,7 @@
             </li>
         </ol>
     </nav> 
-    <img src="starter_files/images/wild-hyacinth.jpg">
+    <img src="starter_files/images/wild-hyacinth.jpg" alt="Wild hyacinth">
     <p>
         Wild Hyacinth: This bulbflower naturalizes well in gardens. The
         bulb grows best in well-drained soil high in humus. It will grow in
@@ -29,7 +29,7 @@
         alongside streams and rivers. The plants may be divided in
         autumn. Additionally the plant spreads by see rather than by runners.
     </p>
-    <img src="starter_files/images/lily-of-the-valley.jpg">
+    <img src="starter_files/images/lily-of-the-valley.jpg" alt="lily-of-the-valley">
     <p>
         Lily-of-the-valley: With its deeply fragrant flowers -- scallop-edge
         bells that dangle above bright emerald-green leaves -- this nearly
@@ -39,7 +39,7 @@
         want to watch this perennial to make sure it stays in bounds. 
         Tolerates shade well. <b>Warning: this plant is poisonous.</b>
     </p>
-    <img src="starter_files/images/crown-imperials.jpg">
+    <img src="starter_files/images/crown-imperials.jpg" alt="crown imperials">
     <p>
         Crown imperials: Crown imperials are strong-growing bulbous
         plants, making rapid growth in the spring, flowering during
@@ -47,7 +47,7 @@
         beds or planters. Does not tolerate shade; needs a warm, sunny
         position where it can be left undisturbed for many years.
     </p>
-    <img src="starter_files/images/persian-buttercup.jpg">
+    <img src="starter_files/images/persian-buttercup.jpg" alt="persian-buttercup">
     <p>
         Persian buttercup: This species of buttercup can get up to 2 feet
         tall and has large showy blooms in a variety of colors from May to
@@ -55,7 +55,7 @@
         planted in the beginning of spring. Each plant will produce up to
         70 blooms in a season. Good for cooler weather; can tolerate light frost.
     </p>
-    <img src="starter_files/images/spring-starflower.jpg">
+    <img src="starter_files/images/spring-starflower.jpg" alt="spring-flower">
     <p>
         Spring starflower: These charming little blooming plants hail from
         Argentina and Uruguay and form dense clumps of perennial
@@ -65,7 +65,7 @@
         with slender, deeply green foliage. Blooms are fragrant and star
         shaped with six blue or white petals.
     </p>
-    <img src="starter_files/images/tulips.jpg">
+    <img src="starter_files/images/tulips.jpg" alt="tulips">
     <p>
         Tulips: We have a wide variety of tulips in many colors. Plant tulip
         bulbs in the fall, 6 to 8 weeks before a hard frost is expected and
