--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lazy River Nursery and Garden Supply</h1>
-    <img src="starter_files/images/store-interior.jpg">
+    <img src="starter_files/images/store-interior.jpg" alt="Lazy River Nursery and Garden Supply">
     <nav>
         <ol>
             <li>
